[package]
name = "nginx-config-mod"
description = """
    A graphql command-line tool
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["command-line", "nginx", "config", "rewrite", "modify"]
categories = ["command-line-utilities"]
homepage = "http://github.com/tailhook/nginx-config-mod"
version = "0.2.9"
authors = ["Paul Colomiets <paul@colomiets.name>"]

[dependencies]
env_logger = "0.5.6"
nginx-config = "0.13.2"
failure = "0.1.1"
structopt = "0.2.5"
log ="0.4.1"
url = "1.7.0"
regex = "1.0.0"
matches = "0.1.6"

[[bin]]
name = "nginx-config-mod"
path = "src/bin/nginx_config_mod/main.rs"
doc = false
